# BiliStalkerMCP

./: .flake8  .gitignore  COOKIE_INSTRUCTIONS.md  Dockerfile  FEATURE_OPTIONS.md  FIELDS_REFERENCE.md  GEMINI.md  LICENSE  PROJECT_DOCS.md  PROMPT.md  README.md  README_zh.md  TIMESTAMP_FIX_SUMMARY.md  bilibili_mcp.py  build.bat  build_script.py  pyproject.toml  pytest.ini  smithery.toml  smithery.yaml
.claude/: settings.local.json
.clinerules/: bili-stalker-mcp-guidelines.md  terminal-environment.md
.github/workflows/: ci.yml
BiliStalkerMCP/: README.md  __main__.py
bili_stalker_mcp/: __init__.py  __main__.py  cli.py  config.py  cookie_refresh.py  core.py  core_direct.py  credentials.py  errors.py  models.py  observability.py  parsers.py  retry.py  server.py  server_direct.py  setup_cookie_refresh.py  start_http.py  start_http_direct.py
bili_stalker_mcp/infra/: circuit_breaker.py  http_client.py  upstream.py
bili_stalker_mcp/parsers/: dynamic_parser.py
bili_stalker_mcp/services/: article_renderer.py  comment_service.py  dynamic_service.py  subtitle_service.py  user_service.py
bili_stalker_mcp/utils/: __init__.py  converters.py  video_id_parser.py
scripts/: integration_suite.py  perf_baseline.py  pypi_release.ps1
skills/bili-content-analysis/: SKILL.md
skills/bili-content-analysis/references/: analysis-style.md
tests/: test_article_content_flow.py  test_article_field_filtering.py  test_circuit_breaker.py  test_cli.py  test_comment_service.py  test_comment_tool_contract.py  test_cookie_refresh.py  test_credentials.py  test_dynamic_pagination.py  test_dynamic_parser_stats.py  test_dynamic_review.py  test_dynamic_type_contract.py  test_followings_retry.py  test_http_client_lifecycle.py  test_integration_suite.py  test_observability.py  test_parser_regression.py  test_perf_baseline.py  test_retry_policy.py  test_risk_control_errors.py  test_server_credential_refresh.py  test_setup_cookie_refresh.py  test_suite.py  test_timestamp_timezone.py  test_tool_contract.py  test_user_info_degradation.py  test_video_detail_subtitles.py  test_video_id_parser.py  test_video_list_contract.py
tests/fixtures/: dynamic_review.json
